tests/miniJava/pos/000860_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( 0 . java ( ) ) java [ 0 ] = 0 ; else while ( 0 ) { } } }
