tests/miniJava/neg/004224_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { class java { } java ; }
